syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

import "tagger/tagger.proto";

package slickqa;

option java_package = "com.slickqa.client.protobuf";
option go_package = "slickqa";
option csharp_namespace = "com.slickqa.client.protobuf";

// auth stuff
message IsAuthorizedRequest {
  string CompanyName = 1; //
  string ProjectName = 2; //
  uint32 Permission = 3; //
}

message IsAuthorizedResponse {
  bool Allowed = 1 [(tagger.tags) = "json:\"Allowed\""];//`json:"Allowed"`
  string Message = 2; //
}

message CurrentUserRequest {
}

message UserInfoRequest {
  string EmailAddress = 1; //
}

message UsersForCompanyQueryRequest {
  string CompanyName = 1; //
}

message UsersForProjectQueryRequest {
  string CompanyName = 1; //
  string ProjectName = 2; //
}

message UsersQueryResponse {
  repeated UserInfo users = 1; //
}

message ProjectPermissionInfo {
  string ProjectName = 1 [(tagger.tags) = "bson:\"name\""];
  repeated string Roles = 2 [(tagger.tags) = "bson:\"roles\""];
}

message CompanyPermissionInfo {
  string CompanyName = 1 [(tagger.tags) = "bson:\"name\""];
  uint32 CompanyAdmin = 2 [(tagger.tags) = "bson:\"admin\""];
  repeated ProjectPermissionInfo Projects = 3 [(tagger.tags) = "bson:\"projects\""];
}

message SlickPermissionInfo {
  uint32 SlickAdmin = 1 [(tagger.tags) = "bson:\"slickAdmin\""];
  repeated CompanyPermissionInfo Companies = 2 [(tagger.tags) = "bson:\"companies\""];
}

message Preferences {
  string HomeUrl = 1 [(tagger.tags) = "bson:\"home\""];
  string Theme = 2 [(tagger.tags) = "bson:\"theme\""];
  string BackgroundUrl = 3 [(tagger.tags) = "bson:\"background\""];
  repeated Link Favorites = 4 [(tagger.tags) = "bson:\"favorites\""];
}

message S3StorageSettings {
  string BaseUrl = 1 [(tagger.tags) = "bson:\"baseUrl\""]; //`bson:"baseUrl"`
  string AccessKey = 2 [(tagger.tags) = "bson:\"accessKey\""]; //`bson:"accessKey"`
  string SecretKey = 3 [(tagger.tags) = "bson:\"secretKey\""]; //`bson:"secretKey"`
  string Bucket = 4 [(tagger.tags) = "bson:\"bucket\""]; //`bson:"bucket"`
  string Prefix = 5 [(tagger.tags) = "bson:\"prefix\""]; //`bson:"prefix"`
}

message CompanySettings {
  string CompanyName = 1 [(tagger.tags) = "bson:\"_id\""]; //`bson:"_id"`
  Preferences UserPreferenceTemplate = 2 [(tagger.tags) = "bson:\"user-preferences\""]; //`bson:"user-preferences"`
  string CustomIconUrl = 3 [(tagger.tags) = "bson:\"icon-url\""]; //`bson:"icon-url"`
  repeated Link Links = 4 [(tagger.tags) = "bson:\"links\""]; //`bson:"links"`
  string CompanyBannerUrl = 5 [(tagger.tags) = "bson:\"company-banner\""]; //`bson:"company-banner"`
  S3StorageSettings StorageSettings = 6 [(tagger.tags) = "bson:\"storage-settings\""]; //`bson:"storage-settings"`
}

message UserInfo {
  string EmailAddress = 1 [(tagger.tags) = "bson:\"_id\""]; //`bson:"_id"`
  SlickPermissionInfo Permissions = 2 [(tagger.tags) = "bson:\"permissions\""]; //`bson:"permissions"`
  string FullName = 3 [(tagger.tags) = "bson:\"fullName\""]; //`bson:"fullName"`
  string GivenName = 4 [(tagger.tags) = "bson:\"givenName\""]; //`bson:"givenName"`
  string FamilyName = 5 [(tagger.tags) = "bson:\"familyName\""]; //`bson:"familyName"`
  string AvatarUrl = 6 [(tagger.tags) = "bson:\"avatarUrl\""]; //`bson:"avatarUrl"`
  string JobTitle = 7 [(tagger.tags) = "bson:\"title\""]; //`bson:"title"`
  string HashedPassword = 8 [(tagger.tags) = "bson:\"hashedPassword\""]; //`bson:"hashedPassword"`
  Preferences UserPreferences = 9 [(tagger.tags) = "bson:\"preferences\""]; //`bson:"preferences"`
  string ApiToken = 10 [(tagger.tags) = "bson:\"apiToken\""]; //`bson:"apiToken"`
}

message ApiTokenLoginRequest {
  string Token = 1; //
}

message PlainUserLoginRequest {
  string UserName = 1; //
  string Password = 2; //
}

message LoginResponse {
  bool Success = 1 [(tagger.tags) = "json:\"Success\""]; //`json:"Success"`
  string Token = 2; //
  UserInfo User = 3; //
}

message VersionRequest {
}

message VersionInfoResponse {
    string Version = 1; //
}

message CompanySettingsRequest {
  string CompanyName = 1; //
}

message AddUserRequest {
  string UserEmail = 1; //
  string CompanyName = 2; //
  CompanyPermissionInfo Permissions = 3; //
}

message AvailableCompanySettingsRequest {
}

message AvailableCompanySettings {
  repeated CompanySettings Companies = 1 [(tagger.tags) = "json:\"Companies\""]; //`json:"Companies"`
}

message AgentsRequest {
  string Company = 1; //
  google.protobuf.Timestamp UpdatedSince = 2; //
}

message AgentsResponse {
  repeated Agent Agents = 1; //

}

message RefreshTokenRequest {
}

message ProjectsRequest {
}

message ProjectsListResponse {
  repeated Project Projects = 1; //
}

message ScreenshotUpdateRequest {
  AgentId Id = 1; //
}

service Auth {
  rpc IsAuthorized(IsAuthorizedRequest) returns(IsAuthorizedResponse) {
    option (google.api.http) = {
      get: "/api/auth/isAuthorized/{CompanyName}/{ProjectName}/{Permission}"
    };
  }
  rpc LoginWithToken(ApiTokenLoginRequest) returns(LoginResponse) {
    option (google.api.http) = {
      get: "/api/auth/login-with-token/{Token}"
    };
  }
  rpc LoginWithCredentials(PlainUserLoginRequest) returns(LoginResponse) {
    option (google.api.http) = {
      post: "/api/auth/login"
      body: "*"
    };
  }
  rpc RefreshToken(RefreshTokenRequest) returns (LoginResponse) {
    option (google.api.http) = {
      get: "/api/auth/refresh-token"
    };
  }
}

service Users {
  rpc GetCurrentUserInfo(CurrentUserRequest) returns(UserInfo) {
    option (google.api.http) = {
      get: "/api/users/current"
    };
  }
  rpc GetUserInfo(UserInfoRequest) returns(UserInfo) {
    option (google.api.http) = {
      get: "/api/users/info/{EmailAddress}"
    };
  }
  rpc GetUsersForCompany(UsersForCompanyQueryRequest) returns(UsersQueryResponse) {
    option (google.api.http) = {
      get: "/api/users/by-company/{CompanyName}"
    };
  }
  rpc GetUsersForProject(UsersForProjectQueryRequest) returns (UsersQueryResponse) {
    option (google.api.http) = {
      get: "/api/users/by-project/{CompanyName}/{ProjectName}"
    };
  }
  rpc UpdateUser(UserInfo) returns (UserInfo) {
    option (google.api.http) = {
      put: "/api/users/{EmailAddress}"
      body: "*"
    };
  }
  rpc AddUserToCompany(AddUserRequest) returns (UserInfo) {
    option (google.api.http) = {
      post: "/api/users/by-company/{CompanyName}"
      body: "*"
    };
  }
}

service Company {
  rpc GetCompanySettings(CompanySettingsRequest) returns (CompanySettings) {
    option (google.api.http) = {
      get: "/api/companies/{CompanyName}"
    };
  }

  rpc GetAvailableCompanySettings(AvailableCompanySettingsRequest) returns (AvailableCompanySettings) {
    option (google.api.http) = {
      get: "/api/companies"
    };
  }

  rpc UpdateCompanySettings(CompanySettings) returns (CompanySettings) {
    option (google.api.http) = {
      put: "/api/companies/{CompanyName}"
      body: "*"
    };
  }
  rpc AddCompanySettings(CompanySettingsRequest) returns (CompanySettings) {
    option (google.api.http) = {
      post: "/api/companies"
      body: "*"
    };
  }
}

service Projects {
  rpc GetProjects(ProjectsRequest) returns (ProjectsListResponse) {
    option (google.api.http) = {
      get: "/api/projects"
    };
  }

  rpc GetProjectByName(ProjectIdentity) returns (Project) {
    option (google.api.http) = {
      get: "/api/projects/{Company}/{Name}"
    };
  }

  rpc AddProject(ProjectIdentity) returns (Project) {
    option (google.api.http) = {
      post: "/api/projects"
      body: "*"
    };
  }

  /*
     rpc UpdateProject(Project) returns (Project) {
       option (google.api.http) = {
         put: "/api/projects/{Id.Company}/{Id.Name}"
         body: "*"
       };
     }
   */
}

service Links {
  rpc GetLinks(LinkListIdentity) returns (LinkList) {
    option (google.api.http) = {
      get: "/api/links/{Company}/{Project}/{EntityType}/{EntityId}"
    };
  }
  rpc AddLink(Link) returns (LinkList) {
    option (google.api.http) = {
      post: "/api/links/{Id.Company}/{Id.Project}/{Id.EntityType}/{Id.EntityId}/{Id.Name}"
      body: "*"
    };
  }
  rpc RemoveLink(LinkIdentity) returns (LinkList) {
    option (google.api.http) = {
      delete: "/api/links/{Company}/{Project}/{EntityType}/{EntityId}/{Name}"
    };
  }
  rpc UpdateLink(Link) returns (LinkList) {
    option (google.api.http) = {
      put: "/api/links/{Id.Company}/{Id.Project}/{Id.EntityType}/{Id.EntityId}/{Id.Name}"
      body: "*"
    };
  }
  rpc GetDownloadUrl(LinkIdentity) returns (LinkUrl) {
    option (google.api.http) = {
      get: "/api/links/{Company}/{Project}/{EntityType}/{EntityId}/{Name}/download"
    };
  }
  rpc GetUploadUrl(FileUploadInfo) returns (LinkUrl) {
    option (google.api.http) = {
      post: "/api/links/{Id.Company}/{Id.Project}/{Id.EntityType}/{Id.EntityId}/{Id.Name}/upload"
      body: "*"
    };
  }
}

service Agents {
  rpc UpdateStatus(AgentStatusUpdate) returns (Agent) {
    option (google.api.http) = {
      post: "/api/agents/{Id.Company}/{Id.Name}/status"
      body: "*"
    };
  }

  rpc GetAgents(AgentsRequest) returns (AgentsResponse) {
    option (google.api.http) = {
      get: "/api/agents/{Company}"
    };
  }

  rpc UpdateScreenshotTimestamp(ScreenshotUpdateRequest) returns (Agent) {
    option (google.api.http) = {
      put: "/api/agents/{Id.Company}/{Id.Name}/screenshot"
      body: "*"
    };
  }

  rpc GetQueuedAction(AgentId) returns(AgentQueuedAction) {
    option (google.api.http) = {
      get: "/api/agents/{Company}/{Name}/action"
    };
  }

  rpc AddQueuedAction(AgentQueuedAction) returns(Agent) {
    option (google.api.http) = {
      post: "/api/agents/{Id.Company}/{Id.Name}/action"
      body: "*"
    };
  }

  rpc GetAgentRunStatus(AgentId) returns(AgentRunStatus) {
    option (google.api.http) = {
      get: "/api/agents/{Company}/{Name}/run-status"
    };
  }

  rpc SetAgentRunStatus(AgentRunStatus) returns(Agent) {
    option (google.api.http) = {
      put: "/api/agents/{Id.Company}/{Id.Name}/run-status"
      body: "*"
    };
  }

}

service Version {
  rpc GetFullVersion(VersionRequest) returns(VersionInfoResponse) {
    option (google.api.http) = {
            get: "/api/version"
    };
  }
}
// slick objects

message FileUploadInfo {
  LinkIdentity Id = 1; //
  int64 Size = 2; //
  string ContentType = 3; //
  string FileName = 4; //
}

message LinkListIdentity {
  string Company = 1 [(tagger.tags) = "bson:\"company\""]; //`bson:"company"`
  string Project = 2 [(tagger.tags) = "bson:\"project\""]; //`bson:"project"`
  string EntityType = 3 [(tagger.tags) = "bson:\"type\""]; //`bson:"type"`
  string EntityId = 4 [(tagger.tags) = "bson:\"id\""]; //`bson:"id"`
}

message LinkList {
  repeated Link links = 1; //
}

message LinkUrl {
  string Url = 1; //
  google.protobuf.Timestamp Expires = 7; //
}

message LinkIdentity {
  string Company = 1 [(tagger.tags) = "bson:\"company,omitempty\""]; //`bson:"company,omitempty"`
  string Project = 2 [(tagger.tags) = "bson:\"project,omitempty\""]; //`bson:"project,omitempty"`
  string EntityType = 3 [(tagger.tags) = "bson:\"type,omitempty\""]; //`bson:"type,omitempty"`
  string EntityId = 4 [(tagger.tags) = "bson:\"id,omitempty\""]; //`bson:"id,omitempty"`
  string Name = 5 [(tagger.tags) = "bson:\"name,omitempty\""]; //`bson:"name,omitempty"`
}

message Link {
  LinkIdentity Id = 1 [(tagger.tags) = "bson:\"_id\""]; //`bson:"_id"`
  string Type = 2 [(tagger.tags) = "bson:\"type\""]; //`bson:"type"`
  int32 Order = 3 [(tagger.tags) = "bson:\"order\""]; //`bson:"order"`
  string Url = 4 [(tagger.tags) = "bson:\"url\""]; //`bson:"url"`
  string Creator = 5 [(tagger.tags) = "bson:\"creator\""]; //`bson:"creator"`
  SlickFile FileInfo = 6 [(tagger.tags) = "bson:\"fileinfo\""]; //`bson:"fileinfo"`
  google.protobuf.Timestamp Updated = 7 [(tagger.tags) = "bson:\"updated\""]; //`bson:"updated"`
}

message SlickFile {
  string Path = 1 [(tagger.tags) = "bson:\"path\""]; //`bson:"path"`
  string FileName = 2 [(tagger.tags) = "bson:\"filename\""]; //`bson:"filename"`
  string ContentType = 3 [(tagger.tags) = "bson:\"contenttype\""]; //`bson:"contenttype"`
  int64 Size = 4 [(tagger.tags) = "bson:\"size\""]; //`bson:"size"`
}

message ProjectIdentity {
  string Company = 1 [(tagger.tags) = "bson:\"company\""]; //`bson:"company"`
  string Name = 2 [(tagger.tags) = "bson:\"name\""]; //`bson:"name"`
}

message Project {
  ProjectIdentity Id = 1 [(tagger.tags) = "bson:\"_id\""]; //`bson:"_id"`
  repeated Link Links = 2 [(tagger.tags) = "bson:\"links\""]; //`bson:"links"`
  repeated string AutomationTools = 3 [(tagger.tags) = "bson:\"automationTools\""]; //`bson:"automationTools"`
  repeated string Tags = 4 [(tagger.tags) = "bson:\"tags\""]; //`bson:"tags"`
  map<string, string> Attributes = 5 [(tagger.tags) = "bson:\"attributes\""]; //`bson:"attributes"`
  google.protobuf.Timestamp LastUpdated = 6 [(tagger.tags) = "bson:\"lastUpdated\""]; //`bson:"lastUpdated"`
}

message ComponentIdentity {
  ProjectIdentity Project = 1 [(tagger.tags) = "bson:\"project\""]; //`bson:"project"`
  string Name = 2 [(tagger.tags) = "bson:\"name\""]; //`bson:"name"`
}

message Component{
  ComponentIdentity Id = 1 [(tagger.tags) = "bson:\"_id\""]; //`bson:"_id"`
  string Description = 2 [(tagger.tags) = "bson:\"description\""]; //
}

message Feature {
  bytes Id = 1 [(tagger.tags) = "bson:\"_id,omitempty\""]; //`bson:"_id,omitempty"`
  string Name = 2 [(tagger.tags) = "bson:\"name\""]; //`bson:"name"`
  bytes ComponentId = 3 [(tagger.tags) = "bson:\"componentId,omitempty\""]; //`bson:"componentId,omitempty"`
  string ProjectId = 4 [(tagger.tags) = "bson:\"_id,omitempty\""]; //`bson:"_id,omitempty"`
}

message Testcase{
  bytes Id = 1 [(tagger.tags) = "bson:\"_id,omitempty\""]; //`bson:"_id,omitempty"`
  string Name = 2 [(tagger.tags) = "bson:\"name\""]; //`bson:"name"`
  string AutomationKey = 3 [(tagger.tags) = "bson:\"automationId\""]; //`bson:"automationId"`
  string AutomationTool = 4 [(tagger.tags) = "bson:\"automationTool\""]; //`bson:"automationTool"`
  bytes ComponentId = 5 [(tagger.tags) = "bson:\"componentId,omitempty\""]; //`bson:"componentId,omitempty"`
  bool Deleted = 6 [(tagger.tags) = "bson:\"deleted\""]; //`bson:"bson:"deleted"`
  int32 ImportanceRating = 7 [(tagger.tags) = "bson:\"importanceRating\""]; //`bson:"bson:"importanceRating"`
  repeated string InactiveNotes = 8 [(tagger.tags) = "bson:\"inactiveNotes\""]; //`bson:"inactiveNotes"`
  string ProjectId = 9 [(tagger.tags) = "bson:\"projectId,omitempty\""]; //`bson:"_id,omitempty"`
  int32 StabilityRating = 10 [(tagger.tags) = "bson:\"stabilityRating\""]; //`bson:"stabilityRating"`
  repeated string Steps = 11 [(tagger.tags) = "bson:\"steps\""]; //`bson:"steps"`
  repeated string Tags = 12 [(tagger.tags) = "bson:\"tags\""]; //`bson:"tags"`
}

message Testplans{
  bytes Id = 1 [(tagger.tags) = "bson:\"_id,omitempty\""]; //`bson:"_id,omitempty"`
  string Name = 2 [(tagger.tags) = "bson:\"name\""]; //`bson:"name"`
}

message Testruns{
  bytes Id = 1 [(tagger.tags) = "bson:\"_id,omitempty\""]; //`bson:"_id,omitempty"`
  string Name = 2 [(tagger.tags) = "bson:\"name\""]; //`bson:"name"`
  string ProjectId = 3 [(tagger.tags) = "bson:\"_id,omitempty\""]; //`bson:"_id,omitempty"`
  string Build = 4 [(tagger.tags) = "bson:\"build\""]; //`bson:"build"`
  google.protobuf.Timestamp RunStarted = 5 [(tagger.tags) = "bson:\"runStarted\""]; //`bson:"runStarted"`
  google.protobuf.Timestamp RunFinished = 6 [(tagger.tags) = "bson:\"runFinished\""]; //`bson:"runFinished"`
  string State = 7 [(tagger.tags) = "bson:\"state\""]; //`bson:"state"`
  string TestplanId = 8 [(tagger.tags) = "bson:\"_id,omitempty\""]; //`bson:"_id,omitempty"`
}

message AgentId {
  string Company = 1 [(tagger.tags) = "bson:\"company\""]; //`bson:"company"`
  string Name = 2 [(tagger.tags) = "bson:\"name\""]; //`bson:"name"`
}

message AgentCurrentTest {
  string Name = 1 [(tagger.tags) = "bson:\"name\""]; //`bson:"name"`
  string Url = 2 [(tagger.tags) = "bson:\"url\""]; //`bson:"url"`
  string AutomationId = 3 [(tagger.tags) = "bson:\"automationId\""]; //`bson:"automationId"`
}

message ProjectReleaseBuildInfo {
  string Project = 1 [(tagger.tags) = "bson:\"project\""]; //`bson:"project"`
  string Release = 2 [(tagger.tags) = "bson:\"release\""]; //`bson:"release"`
  string Build = 3 [(tagger.tags) = "bson:\"build\""]; //`bson:"build"`
}

message AgentQueuedAction {
  AgentId Id = 1 [(tagger.tags) = "bson:\"_id\""]; //`bson:"_id"`
  string Action = 2 [(tagger.tags) = "bson:\"action\""]; //`bson:"action"`
  string ActionParameter = 3 [(tagger.tags) = "bson:\"parameter\""]; //`bson:"parameter"`
}

message AgentRunStatus {
  AgentId Id = 1 [(tagger.tags) = "bson:\"_id\""]; //`bson:"_id"`
  string RunStatus = 2 [(tagger.tags) = "bson:\"status\""]; //`bson:"status"`
}

message AgentStatusUpdate {
  AgentId Id = 1 [(tagger.tags) = "bson:\"_id\""]; //`bson:"_id"`
  AgentStatus Status = 2 [(tagger.tags) = "bson:\"status\""]; //`bson:"status"`
}

message AgentStatus {
  string RunStatus = 3 [(tagger.tags) = "bson:\"runStatus\""]; //`bson:"runStatus"`
  repeated string Groups = 4 [(tagger.tags) = "bson:\"groups\""]; //`bson:"groups"`
  AgentCurrentTest CurrentTest = 5 [(tagger.tags) = "bson:\"testcase\""]; //`bson:"testcase"`
  repeated string Provides = 7 [(tagger.tags) = "bson:\"provides\""]; //`bson:"provides"`
  repeated string BrokenProvides = 8 [(tagger.tags) = "bson:\"brokenProvides\""]; //`bson:"brokenProvides"`
  repeated ProjectReleaseBuildInfo Projects = 9 [(tagger.tags) = "bson:\"projects\""]; //`bson:"projects"`
  string Action = 10 [(tagger.tags) = "bson:\"action\""]; //`bson:"action"`
  string ActionParameter = 11 [(tagger.tags) = "bson:\"actionParameter\""]; //`bson:"actionParameter"`
  string Hardware = 12 [(tagger.tags) = "bson:\"hardware\""]; //`bson:"hardware"`
  string IP = 13 [(tagger.tags) = "bson:\"ip\""]; //`bson:"ip"`
  bool ShouldExit = 14 [(tagger.tags) = "bson:\"shouldExit\""]; //`bson:"shouldExit"`
  map<string, string> Versions = 15 [(tagger.tags) = "bson:\"versions\""]; //`bson:"versions"`
  map<string, string> Attributes = 16 [(tagger.tags) = "bson:\"attributes\""]; //`bson:"attributes"`
  map<string, string> RequiredAttributes = 18 [(tagger.tags) = "bson:\"requiredAttributes\""]; //`bson:"requiredAttributes"`
}

message Agent {
    AgentId Id = 1 [(tagger.tags) = "bson:\"_id\""]; //`bson:"_id"`
    string GivenRunStatus = 2 [(tagger.tags) = "bson:\"givenRunStatus\""]; //`bson:"givenRunStatus"`
    string GivenAction = 3 [(tagger.tags) = "bson:\"givenAction\""]; //`bson:"givenAction"`
    string GivenActionParameter = 4 [(tagger.tags) = "bson:\"givenActionParameter\""]; //`bson:"givenActionParameter"`
    google.protobuf.Timestamp LastCheckin = 5 [(tagger.tags) = "bson:\"checkIn\""]; //`bson:"checkIn"`
    google.protobuf.Timestamp LastScreenshotUpdate = 6 [(tagger.tags) = "bson:\"screenshotUpdate\""]; //`bson:"screenshotUpdate"`
    AgentStatus status = 7 [(tagger.tags) = "bson:\"status\""]; //`bson:"status"`
    string Image = 8 [(tagger.tags) = "bson:\"-\""]; //`bson:"-"`
}
